# HalIR

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
apps/: CMakeLists.txt  cJSON.c  createParmFile.py  halir.c  input.json
include/HalIR/: halir.h  tips.h
src/: BD_ISO_2020.FOR  BD_ISO_82_TO_85.FOR  CMakeLists.txt  cJSON.c  halir.c  libHalIR.c
tests/: CMakeLists.txt  test_hpar.cpp  test_input.cpp  testapp.cpp
tests/CH4_Ref/: ch4_ref.json
tests/CO2_REF/: CO2_Ref.json
tests/CO_TEST/: CO_Test.json
tests/CO_conc/: co_conc.json
tests/CO_test/: CO_Test.json
tests/HCl_Ref/: hcl_ref.json
